Bug 104591 - iwlwifi: 7260: Tx queues stuck when injecting traffic in monitor mode - MWG100247590
Summary: iwlwifi: 7260: Tx queues stuck when injecting traffic in monitor mode - MWG10...
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: network-wireless (show other bugs)
Hardware: x86-64 Linux
: P2 normal
Assignee: DO NOT USE - assign "network-wireless-intel" component instead
URL:
Keywords:
: 104701 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-09-15 14:31 UTC by eli stutz
Modified: 2015-12-12 06:39 UTC (History)
5 users (show)

See Also:
Kernel Version: 4.1.6
Subsystem:
Regression: No
Bisected commit-id:


Attachments
lspci and iw list (10.88 KB, text/plain)
2015-09-15 14:31 UTC, eli stutz
Details
trace.dat and dmesg w/ call trace (747.61 KB, application/gzip)
2015-09-17 14:05 UTC, eli stutz
Details
patch for tx queues hang issue (6.12 KB, application/octet-stream)
2015-11-25 11:02 UTC, chaya.rachel.ivgi
Details
final version (6.66 KB, application/octet-stream)
2015-12-02 12:28 UTC, chaya.rachel.ivgi
Details

Description eli stutz 2015-09-15 14:31:50 UTC
Created attachment 187591 [details]
lspci and iw list

After enabling monitor mode I saw the error "Microcode SW error detected. Restarting 0x2000000", followed by "Hardware restart was requested".

Apart from this, the wifi on this notebook is working fine.

[    1.574477] iwlwifi 0000:02:00.0: loaded firmware version 25.30.13.0 op_mode iwlmvm
[    1.614503] iwlwifi 0000:02:00.0: Detected Intel(R) Dual Band Wireless AC 3160, REV=0x164
...
[   35.432334] iwlwifi 0000:02:00.0: L1 Enabled - LTR Enabled
[   35.432957] iwlwifi 0000:02:00.0: L1 Enabled - LTR Enabled
[   35.537460] iwlwifi 0000:02:00.0: L1 Enabled - LTR Enabled
[   35.538082] iwlwifi 0000:02:00.0: L1 Enabled - LTR Enabled
[   70.963353] device wlp2s0mon entered promiscuous mode
[  116.613585] device wlp2s0mon left promiscuous mode
[  168.245948] device wlp2s0mon entered promiscuous mode
[  178.402457] iwlwifi 0000:02:00.0: Queue 0 stuck for 10000 ms.
[  178.403785] iwlwifi 0000:02:00.0: Current SW read_ptr 0 write_ptr 6
[  178.404996] iwl data: 00000000: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00  ................
[  178.406194] iwlwifi 0000:02:00.0: FH TRBs(0) = 0x00000000
[  178.407261] iwlwifi 0000:02:00.0: FH TRBs(1) = 0x00000000
[  178.408252] iwlwifi 0000:02:00.0: FH TRBs(2) = 0x00000000
[  178.409424] iwlwifi 0000:02:00.0: FH TRBs(3) = 0x00000000
[  178.410428] iwlwifi 0000:02:00.0: FH TRBs(4) = 0x00000000
[  178.411396] iwlwifi 0000:02:00.0: FH TRBs(5) = 0x00000000
[  178.412351] iwlwifi 0000:02:00.0: FH TRBs(6) = 0x00000000
[  178.413461] iwlwifi 0000:02:00.0: FH TRBs(7) = 0x007090b2
[  178.414483] iwlwifi 0000:02:00.0: Q 0 is active and mapped to fifo 3 ra_tid 0x0000 [0,6]
[  178.415458] iwlwifi 0000:02:00.0: Q 1 is active and mapped to fifo 2 ra_tid 0x0000 [0,0]
[  178.416561] iwlwifi 0000:02:00.0: Q 2 is active and mapped to fifo 1 ra_tid 0x0000 [0,0]
[  178.417494] iwlwifi 0000:02:00.0: Q 3 is active and mapped to fifo 0 ra_tid 0x0000 [0,0]
[  178.418385] iwlwifi 0000:02:00.0: Q 4 is inactive and mapped to fifo 0 ra_tid 0x0000 [0,0]
[  178.419424] iwlwifi 0000:02:00.0: Q 5 is inactive and mapped to fifo 0 ra_tid 0x0000 [0,0]
[  178.420319] iwlwifi 0000:02:00.0: Q 6 is inactive and mapped to fifo 0 ra_tid 0x0000 [0,0]
[  178.421190] iwlwifi 0000:02:00.0: Q 7 is inactive and mapped to fifo 0 ra_tid 0x0000 [0,0]
[  178.422049] iwlwifi 0000:02:00.0: Q 8 is inactive and mapped to fifo 0 ra_tid 0x0000 [0,0]
[  178.423028] iwlwifi 0000:02:00.0: Q 9 is active and mapped to fifo 7 ra_tid 0x0000 [179,179]
[  178.423874] iwlwifi 0000:02:00.0: Q 10 is inactive and mapped to fifo 0 ra_tid 0x0000 [0,0]
[  178.424677] iwlwifi 0000:02:00.0: Q 11 is inactive and mapped to fifo 0 ra_tid 0x0000 [0,0]
[  178.425478] iwlwifi 0000:02:00.0: Q 12 is inactive and mapped to fifo 0 ra_tid 0x0000 [0,0]
[  178.426432] iwlwifi 0000:02:00.0: Q 13 is inactive and mapped to fifo 0 ra_tid 0x0000 [0,0]
[  178.427257] iwlwifi 0000:02:00.0: Q 14 is inactive and mapped to fifo 0 ra_tid 0x0000 [0,0]
[  178.428029] iwlwifi 0000:02:00.0: Q 15 is active and mapped to fifo 5 ra_tid 0x0000 [0,0]
[  178.428807] iwlwifi 0000:02:00.0: Q 16 is inactive and mapped to fifo 0 ra_tid 0x0000 [0,0]
[  178.429781] iwlwifi 0000:02:00.0: Q 17 is inactive and mapped to fifo 0 ra_tid 0x0000 [0,0]
[  178.430594] iwlwifi 0000:02:00.0: Q 18 is inactive and mapped to fifo 0 ra_tid 0x0000 [0,0]
[  178.431354] iwlwifi 0000:02:00.0: Q 19 is inactive and mapped to fifo 0 ra_tid 0x0000 [0,0]
[  178.432259] iwlwifi 0000:02:00.0: Microcode SW error detected.  Restarting 0x2000000.
[  178.434223] iwlwifi 0000:02:00.0: CSR values:
[  178.436159] iwlwifi 0000:02:00.0: (2nd byte of CSR_INT_COALESCING is CSR_INT_PERIODIC_REG)
[  178.438280] iwlwifi 0000:02:00.0:        CSR_HW_IF_CONFIG_REG: 0X00489204
[  178.440322] iwlwifi 0000:02:00.0:          CSR_INT_COALESCING: 0X80000040
[  178.442056] iwlwifi 0000:02:00.0:                     CSR_INT: 0X00000000
[  178.443783] iwlwifi 0000:02:00.0:                CSR_INT_MASK: 0X00000000
[  178.445454] iwlwifi 0000:02:00.0:           CSR_FH_INT_STATUS: 0X00000000
[  178.447118] iwlwifi 0000:02:00.0:                 CSR_GPIO_IN: 0X00000000
[  178.448740] iwlwifi 0000:02:00.0:                   CSR_RESET: 0X00000000
[  178.450179] iwlwifi 0000:02:00.0:                CSR_GP_CNTRL: 0X080403c5
[  178.451539] iwlwifi 0000:02:00.0:                  CSR_HW_REV: 0X00000164
[  178.452898] iwlwifi 0000:02:00.0:              CSR_EEPROM_REG: 0X00000000
[  178.454247] iwlwifi 0000:02:00.0:               CSR_EEPROM_GP: 0X80000000
[  178.455590] iwlwifi 0000:02:00.0:              CSR_OTP_GP_REG: 0X803a0000
[  178.456689] iwlwifi 0000:02:00.0:                 CSR_GIO_REG: 0X001f0042
[  178.457691] iwlwifi 0000:02:00.0:            CSR_GP_UCODE_REG: 0X00000000
[  178.458688] iwlwifi 0000:02:00.0:           CSR_GP_DRIVER_REG: 0X00000000
[  178.459693] iwlwifi 0000:02:00.0:           CSR_UCODE_DRV_GP1: 0X00000000
[  178.460689] iwlwifi 0000:02:00.0:           CSR_UCODE_DRV_GP2: 0X00000000
[  178.461672] iwlwifi 0000:02:00.0:                 CSR_LED_REG: 0X00000060
[  178.462668] iwlwifi 0000:02:00.0:        CSR_DRAM_INT_TBL_REG: 0X8840bf26
[  178.463645] iwlwifi 0000:02:00.0:        CSR_GIO_CHICKEN_BITS: 0X27800200
[  178.464616] iwlwifi 0000:02:00.0:             CSR_ANA_PLL_CFG: 0Xd55555d5
[  178.465586] iwlwifi 0000:02:00.0:      CSR_MONITOR_STATUS_REG: 0X6bb7f757
[  178.466554] iwlwifi 0000:02:00.0:           CSR_HW_REV_WA_REG: 0X0001001a
[  178.467512] iwlwifi 0000:02:00.0:        CSR_DBG_HPET_MEM_REG: 0Xffff0000
[  178.468309] iwlwifi 0000:02:00.0: FH register values:
[  178.469409] iwlwifi 0000:02:00.0:         FH_RSCSR_CHNL0_STTS_WPTR_REG: 0X0d7ad700
[  178.470313] iwlwifi 0000:02:00.0:        FH_RSCSR_CHNL0_RBDCB_BASE_REG: 0X00d7ad80
[  178.471215] iwlwifi 0000:02:00.0:                  FH_RSCSR_CHNL0_WPTR: 0X000000c0
[  178.472103] iwlwifi 0000:02:00.0:         FH_MEM_RCSR_CHNL0_CONFIG_REG: 0X00801114
[  178.472981] iwlwifi 0000:02:00.0:          FH_MEM_RSSR_SHARED_CTRL_REG: 0X000000fc
[  178.473844] iwlwifi 0000:02:00.0:            FH_MEM_RSSR_RX_STATUS_REG: 0X03030000
[  178.474705] iwlwifi 0000:02:00.0:    FH_MEM_RSSR_RX_ENABLE_ERR_IRQ2DRV: 0X00000000
[  178.475569] iwlwifi 0000:02:00.0:                FH_TSSR_TX_STATUS_REG: 0X07ff0001
[  178.476429] iwlwifi 0000:02:00.0:                 FH_TSSR_TX_ERROR_REG: 0X00000000
[  178.477375] iwlwifi 0000:02:00.0: Start IWL Error Log Dump:
[  178.478052] iwlwifi 0000:02:00.0: Status: 0x00000000, count: 6
[  178.478716] iwlwifi 0000:02:00.0: Loaded firmware version: 25.30.13.0
[  178.479359] iwlwifi 0000:02:00.0: 0x00000084 | NMI_INTERRUPT_UNKNOWN       
[  178.479907] iwlwifi 0000:02:00.0: 0x00000230 | uPc
[  178.480410] iwlwifi 0000:02:00.0: 0x00000000 | branchlink1
[  178.480913] iwlwifi 0000:02:00.0: 0x00000B2E | branchlink2
[  178.481340] iwlwifi 0000:02:00.0: 0x00014734 | interruptlink1
[  178.481771] iwlwifi 0000:02:00.0: 0x00014734 | interruptlink2
[  178.482227] iwlwifi 0000:02:00.0: 0x00000000 | data1
[  178.482678] iwlwifi 0000:02:00.0: 0x00000080 | data2
[  178.483210] iwlwifi 0000:02:00.0: 0x07030000 | data3
[  178.483658] iwlwifi 0000:02:00.0: 0x00000000 | beacon time
[  178.484110] iwlwifi 0000:02:00.0: 0x0882F203 | tsf low
[  178.484528] iwlwifi 0000:02:00.0: 0x00000000 | tsf hi
[  178.484947] iwlwifi 0000:02:00.0: 0x00000000 | time gp1
[  178.485395] iwlwifi 0000:02:00.0: 0x0882F204 | time gp2
[  178.485845] iwlwifi 0000:02:00.0: 0x00000000 | time gp3
[  178.486383] iwlwifi 0000:02:00.0: 0x0004191E | uCode version
[  178.486801] iwlwifi 0000:02:00.0: 0x00000164 | hw version
[  178.487226] iwlwifi 0000:02:00.0: 0x00489204 | board version
[  178.487651] iwlwifi 0000:02:00.0: 0x09B2002C | hcmd
[  178.488066] iwlwifi 0000:02:00.0: 0x24022000 | isr0
[  178.488510] iwlwifi 0000:02:00.0: 0x01800000 | isr1
[  178.488929] iwlwifi 0000:02:00.0: 0x00000002 | isr2
[  178.489392] iwlwifi 0000:02:00.0: 0x0041FCC0 | isr3
[  178.489899] iwlwifi 0000:02:00.0: 0x00000000 | isr4
[  178.490346] iwlwifi 0000:02:00.0: 0x00000110 | isr_pref
[  178.490778] iwlwifi 0000:02:00.0: 0x00000000 | wait_event
[  178.491186] iwlwifi 0000:02:00.0: 0x00000080 | l2p_control
[  178.491612] iwlwifi 0000:02:00.0: 0x00010030 | l2p_duration
[  178.492005] iwlwifi 0000:02:00.0: 0x0000003F | l2p_mhvalid
[  178.492389] iwlwifi 0000:02:00.0: 0x00008000 | l2p_addr_match
[  178.492818] iwlwifi 0000:02:00.0: 0x00000005 | lmpm_pmg_sel
[  178.493291] iwlwifi 0000:02:00.0: 0x17061509 | timestamp
[  178.493726] iwlwifi 0000:02:00.0: 0x0034C0C8 | flow_handler
[  178.494103] ieee80211 phy0: Hardware restart was requested
[  178.614532] iwlwifi 0000:02:00.0: L1 Enabled - LTR Enabled
[  178.615512] iwlwifi 0000:02:00.0: L1 Enabled - LTR Enabled
[  178.717499] iwlwifi 0000:02:00.0: L1 Enabled - LTR Enabled
[  178.718114] iwlwifi 0000:02:00.0: L1 Enabled - LTR Enabled
[  202.415282] device wlp2s0mon left promiscuous mode

I'm using Arch Linux, kernel version 4.1.6-1-ARCH, intel-ucode 20150121-1, linux-firmware 20150722.e10097a-1.
Comment 1 Luca Coelho 2015-09-16 05:09:34 UTC
Thanks for your report!

Can you please provide trace-cmd logs and the devcoredump of the transition into monitor mode that causes this problem on your system? You can find instructions on how to do it here:

https://wireless.wiki.kernel.org/en/users/drivers/iwlwifi/debugging

Does it happen every time when you start monitor mode? What were you doing before setting the device into monitor mode?

I'm reducing the importance of this bug to P2, since this happens only with monitor mode.
Comment 2 eli stutz 2015-09-17 14:05:32 UTC
Created attachment 187831 [details]
trace.dat and dmesg w/ call trace
Comment 3 eli stutz 2015-09-17 14:05:59 UTC
I'm sorry I couldn't provide the devcoredump, as I don't have /sys/kernel/debug/iwlwifi and I don't really have time to recompile the kernel ATM.

Steps to reproduce:

First I enabled monitor mode using airmon-ng (after this I can scan available networks without issues).

Then I fired the "reaver" tool to check my AP's security, syntax: reaver -i wlp2s0mon -b BSSID -c CHANNEL -vv -S

and this is where "Microcode SW error detected" appears.

As soon as I fired reaver again, I got another microcode error. I also tried this procedure on another wireless card (different vendor and driver) and everything works without issues.
Comment 4 Luca Coelho 2015-09-18 06:14:07 UTC
*** Bug 104701 has been marked as a duplicate of this bug. ***
Comment 5 denisbsu 2015-09-18 06:45:24 UTC
devcoredump sent to email
Comment 6 eli stutz 2015-09-22 14:00:51 UTC
Just wondering, why is status still set to NEEDINFO? I had hoped denisbsu's devcoredump along with my trace-cmd & logs would be enough
Comment 7 Luca Coelho 2015-10-05 07:17:47 UTC
Sorry for the delay.  You are right, we probably have all the information we need.  I have reported this bug internally and we will come back to you as soon as we have any news.
Comment 8 chaya.rachel.ivgi 2015-11-25 11:02:59 UTC
Created attachment 195451 [details]
patch for tx queues hang issue

hi, 
Attached here is the patch that should fix the tx queues hang issue.
Please check with the patch and let me know if it resolves the issue.
Comment 9 eli stutz 2015-12-01 15:25:57 UTC
Hi, your patch seems to work fine here. Solved for me. Thank you!
Comment 10 Emmanuel Grumbach 2015-12-01 15:57:45 UTC
We will get back to you with the final version of the fix.
Comment 11 chaya.rachel.ivgi 2015-12-02 12:28:32 UTC
Created attachment 196331 [details]
final version

hi,

attached a final patch with some changes, 
pls check again to be sure the issue indeed was solved.

thank,
Comment 12 eli stutz 2015-12-12 06:39:18 UTC
Sorry for the delay. The final patch is working, thanks.

Note You need to log in before you can comment on or make changes to this bug.